--- a/businessstyle.css
+++ b/businessstyle.css
@@ -7,7 +7,7 @@ body {
     text-align: center;
 }
 header {
-    background: url('images/backgrd1_update.jpg');
+    background: url('Lyndee-s-consult/backgrd1_update.jpg');
     color: white;
     background-size: cover;
     background-position: center;
