--- a/businessstyle.css
+++ b/businessstyle.css
@@ -7,7 +7,7 @@ body {
     text-align: center;
 }
 header {
-    background: url('Lyndee-s-consult/backgrd1_update.jpg');
+    background: url("https://github.com/otoolinda/Lyndee-s-consult/blob/main/backgrd1_update.jpg");
     color: white;
     background-size: cover;
     background-position: center;
