--- a/businessstyle.css
+++ b/businessstyle.css
@@ -54,10 +54,10 @@ footer {
 #projects {
     background-color: #08961b;
     padding: 50px 0;
-    background: url('Lyndee-s-consult/backgrd1_update.jpg');
+    background: url('https://github.com/otoolinda/Lyndee-s-consult/blob/main/backgrd1_update.jpg');
 }
 #services{
-    background: url('Lyndee-s-consult/backgrd1_update.jpg');
+    background: url('https://github.com/otoolinda/Lyndee-s-consult/blob/main/backgrd1_update.jpg');
 }
 
 .projects-grid {
